[metadata]
name = blackjack-roguelite
version = 0.1.0
description = Terminal blackjack roguelite -- beat enemies at 21, capture companions, survive 3 acts

[options]
packages = blackjack_roguelite
python_requires = >=3.8

[options.entry_points]
console_scripts =
    blackjack = blackjack_roguelite.play:main
    blackjack-sim = blackjack_roguelite.main:main
